# webcc

./: .editorconfig  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  README_zh_CN.md  _clang-format  compile_commands.json
autotest/: CMakeLists.txt  client_autotest.cc  client_timeout_autotest.cc  http_client_autotest.cc  main.cc  test_http_client.cc
autotest/client_autotest/: CMakeLists.txt  client_autotest.cc
autotest/client_timeout_autotest/: CMakeLists.txt  client_timeout_autotest.cc
example/: CMakeLists.txt  HttpBin.md  soap_calc_client.cc  soap_calc_client_parasoft.cc
example/common/: book.cc  book.h  book_json.cc  book_json.h  book_xml.cc
example/github_client/: CMakeLists.txt  main.cc
example/github_rest_client/: CMakeLists.txt  main.cc
example/http/async_client/: CMakeLists.txt  main.cc
example/http/client/: main.cc
example/http_async_client/: main.cc
example/http_bin_client/: CMakeLists.txt  main.cc
example/http_client/: CMakeLists.txt  main.cc
example/http_hello_async_client/: CMakeLists.txt  main.cc
example/http_hello_client/: CMakeLists.txt  main.cc
example/http_ssl_async_client/: CMakeLists.txt  main.cc
example/http_ssl_client/: CMakeLists.txt  main.cc
example/rest/book_async_client/: CMakeLists.txt  main.cc
example/rest/book_client/: main.cc
example/rest/book_server/: book_services.cc  main.cc
example/rest_book_async_client/: CMakeLists.txt  main.cc
example/rest_book_client/: CMakeLists.txt  main.cc
example/rest_book_server/: CMakeLists.txt  book_services.cc  book_services.h  main.cc  services.cc  services.h
example/rest_github_client/: CMakeLists.txt  main.cc
example/soap_book_client/: CMakeLists.txt  book_client.cc  book_client.h  main.cc
example/soap_book_server/: CMakeLists.txt  book_service.cc  book_service.h  main.cc
example/soap_calc_client/: CMakeLists.txt  calc_client.cc  calc_client.h  main.cc
example/soap_calc_client_parasoft/: CMakeLists.txt  main.cc
example/soap_calc_server/: CMakeLists.txt  calc_service.cc  calc_service.h  main.cc
examples/: CMakeLists.txt  client_basics.cc  concurrency_test.cc  encoding.cc  encoding.h  file_downloader.cc  file_server.cc  file_upload_client.cc  file_upload_server.cc  file_upload_server.py  form_client.cc  form_server.cc  form_server_flask.py  form_urlencoded_client.cc  github_client.cc  google_client.cc  heartbeat_client.cc  hello_client.cc  hello_server.cc  hello_world_server.cc  http_client.cc  rest_book_client.cc  rest_book_server.cc  server_states.cc  soap_book_client.cc  soap_book_server.cc  soap_calc_client.cc  soap_calc_client_parasoft.cc  soap_calc_server.cc  ssl_certificate.cc  ssl_hello_client.cc  ssl_hello_server.cc  static_file_server.cc  static_server.cc  url_unicode.cc  websocket_client.cc
examples/book_client/: CMakeLists.txt  book_client.cc  book_client.h  book_json.cc  book_json.h  main.cc  rest_book_client.cc
examples/book_server/: CMakeLists.txt  book.cc  book.h  book_db.cc  book_db.h  book_json.cc  main.cc  views.cc  views.h
examples/common/: book.cc  book.h  book_json.cc  book_xml.cc  book_xml.h
examples/qt_app_server/: CMakeLists.txt  main.cc  main_window.cpp  main_window.h
src/: CMakeLists.txt
src/csoap/: CMakeLists.txt  common.cc  common.h  connection.cc  connection.h  connection_manager.cc  connection_manager.h  csoap.h  http_client.cc  http_client.h  http_message.cc  http_message.h  http_parser.cc  http_parser.h  http_request.cc  http_request.h  http_request_handler.cc  http_request_handler.h  http_request_parser.cc  http_request_parser.h  http_response.cc  http_response.h  http_response_parser.cc  http_response_parser.h  http_server.cc  http_server.h  http_session.cc  http_session.h  queue.h  rest_server.cc  rest_server.h  rest_service.h  soap_client.cc  soap_client.h  soap_message.cc  soap_message.h  soap_request.cc  soap_request.h  soap_request_envelope.cc  soap_request_envelope.h  (+14 more)
src/csoap_unittest/: CMakeLists.txt  rest_service_manager_test.cc
src/demo/: CMakeLists.txt  calculator.cc  calculator.h  calculator.wsdl  main.cc
src/gtest/: CMakeLists.txt  gtest-death-test.cc  gtest-port.cc  gtest-test-part.cc  gtest.cc
src/pugixml/: CMakeLists.txt
src/tinyxml/: CMakeLists.txt
src/webcc/: CMakeLists.txt  async_http_client.cc  async_http_client.h  async_rest_client.cc  async_rest_client.h  common.cc  common.h  globals.cc  globals.h  http_async_client.cc  http_async_client.h  http_client.cc  http_client.h  http_connection.cc  http_connection.h  http_message.cc  http_message.h  http_parser.cc  http_parser.h  http_request.cc  http_request.h  http_request_handler.cc  http_request_handler.h  http_request_parser.cc  http_request_parser.h  http_response.cc  http_response.h  http_response_parser.cc  http_response_parser.h  http_server.cc  http_server.h  http_session.cc  http_session.h  logger.cc  logger.h  queue.h  rest_async_client.cc  rest_async_client.h  rest_client.cc  rest_client.h  (+29 more)
test/: CMakeLists.txt  test_http_client.cc  test_logger.cc
unittest/: CMakeLists.txt  base64_test.cc  base64_unittest.cc  body_unittest.cc  http_parser_test.cc  parser_unittest.cc  request_parser_unittest.cc  response_builder_unittest.cc  rest_service_manager_test.cc  rest_service_manager_unittest.cc  router_unittest.cc  service_manager_unittest.cc  string_unittest.cc  url_test.cc  url_unittest.cc  utility_unittest.cc  ws_frame_unittest.cc  ws_parser_unittest.cc
webcc/: CMakeLists.txt  async_client_base.cc  async_client_base.h  async_http_client.cc  async_rest_client.cc  async_rest_client.h  base64.cc  base64.h  basic_rest_client.h  blocking_client_base.cc  blocking_client_base.h  body.cc  body.h  client.cc  client.h  client_base.cc  client_base.h  client_pool.cc  client_pool.h  client_session.cc  client_session.h  common.cc  common.h  config.h.example  config.h.in  connection.cc  connection.h  connection_base.cc  connection_base.h  connection_pool.cc  connection_pool.h  fs.h  globals.cc  globals.h  gzip.cc  gzip.h  http_async_client.cc  http_async_client.h  http_async_client_base.cc  http_async_client_base.h  (+134 more)
webcc/internal/: globals.h
(+57 files in other folders)
